--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@ table tr td:last-child {
     font-size: 80px;
     cursor: pointer;
     position: absolute;
-    bottom: 140px;
+    bottom: 3vh;
 }
 
 .restart-btn:hover {
